--- a/themes/blender_manifest.toml
+++ b/themes/blender_manifest.toml
@@ -2,16 +2,16 @@ schema_version = "1.0.0"
 
 
 id = "mengges_dark_theme"
-version = "1.1.0"
+version = "1.2.0"
 name = "MengGe's Dark Theme"
 tagline = "Dark Theme Pro Max Ultra Plus Lift"
-maintainer = "MengGe_KKD <menggekkd@gmail.com>"
+maintainer = "MengGe_KKD <https://menggekkd.me>"
 
 type = "theme"
 
 tags = ["Dark"]
 
-blender_version_min = "4.4.0"
+blender_version_min = "5.0.0"
 
 license = [
   "SPDX:GPL-2.0-or-later",
